--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Set the page title -->
-  <title>Assignment 02</title>
+  <title>Assignment 02 blackpink webpage</title>
 
   <!-- Set the charset we're using to UTF-8 -->
   <meta charset="utf-8" />
@@ -22,12 +22,170 @@
 </head>
 
 <body>
-  <!--
+<header>
 
-    YOU HAVE TO MODIFY THE HTML TO BUILD YOUR AWESOME PAGE
+  <a href="#" class="logo">blackpink</a>
+  <nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#members">Members</a>
+    <a href="#solos">Solos</a>
+    <a href="#cta">Feedback</a>
+  </nav>
 
-  -->
-  <h1>Assignment 02</h1>
+</header>
+<section class="home" id="home">
+  <div class="content">
+    
+
+  </div>
+
+</section>
+
+
+<section class="about" id="about">
+
+
+  <h1 class="heading"> About Them</h1>
+  <div class="content">
+    <h3>Who is BlackPink</h3>
+    <div class="small">
+      <p>Biggest Girl Group in the world?</p>
+    </div>
+    <p>BLACKPINK is a South Korean girl group known for their exceptional talent in singing, rapping, and dancing. They have gained enormous popularity due to catchy music, international appeal, strong fashion and style, striking visuals, and high-quality production in their music videos and performances. Collaborations with international artists, effective management and marketing by YG Entertainment, and a dedicated fan base have also contributed to their immense success.</p>
+    <a href="#" class="btn">Click To Know More</a>
+
+  </div>
+
+  <div class="row">
+    <div class="video">
+      <img src="images/gif.gif" alt="bp gif">
+    
+    </div>
+    <div class="content">
+      <h3>Awards They won</h3>
+      <p>Blackpink, the South Korean girl group, has achieved remarkable success since their debut in 2016. With a unique blend of K-pop, hip-hop, and pop, Blackpink has captured the hearts of fans worldwide. Their groundbreaking achievements include becoming the first K-pop girl group to perform at the Coachella Valley Music and Arts Festival and amassing billions of views on their music videos on YouTube. They have released chart-topping hits such as "Ddu-Du Ddu-Du" and "How You Like That" and have collaborated with international artists, further expanding their global reach. Their captivating performances, striking visuals, and infectious music have established Blackpink as one of the most influential and popular girl groups in the world, making them a force to be reckoned with in the music industry.</p>
+      <a href="#" class="btn">Click To Learn More</a>
+
+    </div>
+  </div>
+
+</section>
+
+<section class="members" id="members">
+  <h1 class="heading">Members</h1>
+  <div class="card-container">
+    <div class="card">
+      <img src="images/jisoo.jpeg" alt="jisoo">
+      <div class="card-content">
+        <h2>KIM JISOO</h2>
+      <p>She is one of the four members of the group and is known for her vocal abilities and visual presence. Jisoo is considered one of the lead vocalists in BLACKPINK, and she contributes her singing talents to the group's music. She is also known for her striking and elegant appearance, making her a prominent visual member of the group. Jisoo has played a significant role in BLACKPINK's success as a K-pop idol.</p>
+      <a href="" class="btn">READ MORE</a>
+      </div>
+     </div>
+     <div class="card">
+      <img src="images/jennie.jpeg" alt="jennie">
+      <div class="card-content">
+        <h2>KIM JENNIE</h2>
+        <p>Jennie is one of the four members of BLACKPINK and is known for her versatile talents within the group. She is often considered the group's main rapper due to her strong rap skills, but she is also a capable singer and dancer. Jennie has a charismatic stage presence and has contributed significantly to BLACKPINK's music and performances.She is recognized not only for her musical talents but also for her fashion sense and style, often being regarded as a fashion icon.</p>
+        <a href="" class="btn">READ MORE</a>
+      </div>
+     </div>
+     <div class="card">
+      <img src="images/rose.jpeg" alt="rose pic">
+      <div class="card-content">
+        <h2>PARK ROSÉ</h2>
+        <p>Rosé is one of the four members of BLACKPINK and is known for her exceptional vocal abilities. She is the group's main vocalist, known for her powerful and emotive singing. Her unique and captivating voice has played a vital role in BLACKPINK's music, contributing to the group's signature sound.</p>
+        <a href="" class="btn">READ MORE</a>
+      </div>
+     </div>
+     <div class="card">
+      <img src="images/lisa.jpeg" alt="lisa pic">
+      <div class="card-content">
+        <h2>LISA MANOBAN</h2>
+        <p>Lisa is known for her exceptional rap and dance skills. She is the group's lead rapper and is also renowned for her dynamic and captivating stage presence as a dancer. Her unique style and talent have made her a standout member of BLACKPINK. Lisa's international background as a Thai member of a Korean girl group has contributed to BLACKPINK's global appeal. She is highly regarded for her contributions to the group's music, and her popularity extends well beyond South Korea, making her a prominent figure in the K-pop industry.</p>
+        <a href="" class="btn">READ MORE</a>
+      </div>
+     </div>
+  </div>
+</section>
+<section class="solos" id="solos">
+  <h1 class="heading">Solos</h1>
+  <div class="container1">
+    <div class="content-section">
+      <div class="card1">
+        <img src="images/bpgif.gif" alt="bp">
+        <h2>'SHUT DOWN'</h2>
+        <p>BLACKPINK latest music video</p>
+        <a href="https://www.youtube.com/watch?v=POe9SOEKotk" class="btn">Click To Watch Now</a>
+
+      </div>
+      <div class="card1">
+        <img src="images/jisoogif.gif" alt="jisoo">
+        <h2>'FLOWER'</h2>
+        <p>Jisoo solo mv</p>
+        <a href="https://www.youtube.com/watch?v=YudHcBIxlYw" class="btn">Click To Watch Now</a>
+      </div>
+      <div class="card1">
+        <img src="images/jenniegif.gif" alt="jennie gif">
+        <h2>'SOLO'</h2>
+        <p>Jennie solo mv</p>
+        <a href="https://www.youtube.com/watch?v=b73BI9eUkjM" class="btn">Click To Watch Now</a>
+      </div>
+      <div class="card1">
+        <img src="images/rosesgif.gif" alt="rose">
+        <h2>'ON THE GROUND'</h2>
+        <p>Rosé solo mv</p>
+        <a href="https://www.youtube.com/watch?v=CKZvWhCqx1s" class="btn">Click To Watch Now</a>
+      </div>
+      <div class="card1">
+        <img src="images/lisagif.webp" alt="lisa">
+        <h2>'LALISA'</h2>
+        <p>Lisa solo mv</p>
+        <a href="https://www.youtube.com/watch?v=awkkyBH2zEo" class="btn">Click To Watch Now</a>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
+<section class="cta" id="cta">
+  <h1 class="heading">Feedback About The Videos</h1>
+  <div class="feedback-form">
+    <h2>Feedback Form</h2>
+    <form action="submit_feedback.php" method="post">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="feedback">Feedback:</label>
+            <textarea id="feedback" name="feedback" required></textarea>
+        </div>
+        <div class="cta-button">
+            <input type="submit" value="Submit Feedback">
+        </div>
+    </form>
+</div>
+</section>
+<footer>
+  <a href="#" class="logo">blackpink</a>
+  <nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#members">Members</a>
+    <a href="#solos">Solos</a>
+    <a href="#cta">Feedback</a>
+  </nav>
+  <p class="copyright">© 2023 Blackpink. All rights reserved.</p>
+</footer>
+
+
 </body>
 
 </html>
