--- a/index.html
+++ b/index.html
@@ -189,3 +189,16 @@
 </body>
 
 </html>
+
+   <!--
+    <section>
+        <h2>bibliography</h2>
+        <h3>links</h3>
+          <ul>
+            <li>https://www.youtube.com/watch?v=PgAZ8KzfhO8</li>
+            <li>https://www.youtube.com/watch?v=oYRda7UtuhA&t=449s</li>
+            <li>https://chat.openai.com/c/290f8793-7b28-44f6-ad73-2fdfb6c428d3</li>
+            <li>https://validator.w3.org/nu/#textarea</li>
+            <li>https://www.w3schools.com/</li>
+          </ul>
+        </section>
